# Reader

./: .env.example  .gitignore  CLAUDE.md  DESIGN.md  README.md  config.yaml  pyproject.toml
.beads/: .beads-credential-key  .gitignore  metadata.json
.claude/: settings.json
.pocock/: README.md  archive.md  loop-custom.sh  loop.sh  once.sh  progress.md  prompt.md
.pocock/loops/: coverage.md  entropy.md  lint.md
audibleweb/: __main__.py  app.py  config.py  db.py  log.py  plugins.py  worker.py
audibleweb/api/: __init__.py  routes.py  sse.py
audibleweb/core/: feed.py  pipeline.py
audibleweb/engines/: __init__.py  base.py  kokoro.py
audibleweb/extractors/: __init__.py  base.py  file.py  raw_text.py  rss.py  web.py
audibleweb/lib/: __init__.py  chunking.py  cleaning.py  voice.py
audibleweb/migrations/: 001_initial.sql  002_heartbeat.sql  003_rss_seen.sql  004_file_size.sql  005_stage_detail.sql  006_job_events.sql
audibleweb/pipeline/: __init__.py  normalize.py  queue.py  stitch.py
audibleweb/publishers/: __init__.py  base.py  github_pages.py  local.py
audibleweb/static/css/: app.css  tokens.css
audibleweb/web/: routes.py
docs/: design-preview.html  design.md
tests/: test_api.py  test_app.py  test_chunking.py  test_cleaning.py  test_config.py  test_db.py  test_extractors.py  test_feed.py  test_kokoro.py  test_logging.py  test_normalize.py  test_pipeline.py  test_plugins.py  test_publishers.py  test_rss_extractor.py  test_sse.py  test_stitch.py  test_voice.py  test_web_extractor.py  test_web_ui.py  test_worker.py
(+17 files in other folders)
